<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context="com.example.android.musicquiz.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="Hi!"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/question1"
            android:textColor="@color/turkis"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/q1rb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer1q1"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer2q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer2q1"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer3q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer3q1"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer4q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer4q1"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/question2"
            android:textColor="@color/turkis"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer1q2"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer2q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer2q2"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer3q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer3q2"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer4q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer4q2"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/question3"
            android:textColor="@color/turkis"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer1q3"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer2q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer2q3"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer3q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer3q3"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer4q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer4q3"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/question4"
            android:textColor="@color/turkis"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer1q4"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer2q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer2q4"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer3q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer3q4"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer4q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer4q4"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/question5"
            android:textColor="@color/turkis"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer1q5"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer2q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer2q5"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer3q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer3q5"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer4q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/answer4q5"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/turkis"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>